--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -50,7 +50,7 @@ svg {
     display: block;
     width: 100%;
     padding: 0.5rem 1rem;
-    padding-right: 2.5rem; /* make room for the arrow */
+    padding-right: 2.5rem; 
     font-size: 16px;
     line-height: 1.5;
     color: #444;
